Remove unused code

--- a/index.html
+++ b/index.html
@@ -130,142 +130,7 @@
         </li>
       </ul>
     </section>
-    <div id="portfolio" class="works">
-      <!-- <article class="card">
-        <img
-          src="images/snapshots/tonic.svg"
-          alt="Snapshot of the project"
-          class="snapshot mb-12"
-        />
-        <div class="card-body">
-          <h2 class="header-3 color-n800 mb-12">Tonic</h2>
-          <div class="frame-2">
-            <span class="caption bolder-2 color-n600">CANOPY</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">Backend Dev</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">2015</span>
-          </div>
-          <p class="body-3 color-n600 mb-12">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required..
-          </p>
-          <ul class="tags">
-            <li class="tag"><span class="small color-b400">html</span></li>
-            <li class="tag"><span class="small color-b400">css</span></li>
-            <li class="tag">
-              <span class="small color-b400">JavaScript</span>
-            </li>
-          </ul>
-          <div class="action">
-            <button type="button" class="button">See Project</button>
-          </div>
-        </div>
-      </article>
-      <article class="card">
-        <img
-          src="images/snapshots/stories.svg"
-          alt="Snapshot of the project"
-          class="snapshot mb-12"
-        />
-        <div class="card-body swap">
-          <h2 class="header-3 color-n800 mb-12">Multi-Post Stories</h2>
-          <div class="frame-2">
-            <span class="caption bolder-2 color-n600">FACEBOOK</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">Backend Dev</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">2015</span>
-          </div>
-          <p class="body-3 color-n600 mb-12">
-            Experimental content creation feature that allows users to add to an
-            existing story over the course of a day without spamming their
-            friends..
-          </p>
-          <ul class="tags">
-            <li class="tag"><span class="small color-b400">html</span></li>
-            <li class="tag">
-              <span class="small color-b400">Ruby on rails</span>
-            </li>
-            <li class="tag"><span class="small color-b400">css</span></li>
-            <li class="tag">
-              <span class="small color-b400">JavaScript</span>
-            </li>
-          </ul>
-          <div class="action">
-            <button type="button" class="button">See Project</button>
-          </div>
-        </div>
-      </article>
-      <article class="card">
-        <img
-          src="images/snapshots/facebook.svg"
-          alt="Snapshot of the project"
-          class="snapshot mb-12"
-        />
-        <div class="card-body">
-          <h2 class="header-3 color-n800 mb-12">Facebook 360</h2>
-          <div class="frame-2">
-            <span class="caption bolder-2 color-n600">FACEBOOK</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">Full Stack Dev</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">2015</span>
-          </div>
-          <p class="body-3 color-n600 mb-12">
-            Exploring the future of media in Facebook's first Virtual Reality
-            app; a place to discover and enjoy 360 photos and videos on Gear VR.
-          </p>
-          <ul class="tags">
-            <li class="tag"><span class="small color-b400">html</span></li>
-            <li class="tag">
-              <span class="small color-b400">Ruby on rails</span>
-            </li>
-            <li class="tag"><span class="small color-b400">css</span></li>
-            <li class="tag">
-              <span class="small color-b400">JavaScript</span>
-            </li>
-          </ul>
-          <div class="action">
-            <button type="button" class="button">See Project</button>
-          </div>
-        </div>
-      </article>
-      <article class="card">
-        <img
-          src="images/snapshots/uber.svg"
-          alt="Snapshot of the project"
-          class="snapshot mb-12"
-        />
-        <div class="card-body swap">
-          <h2 class="header-3 color-n800 mb-12">Uber Navigation</h2>
-          <div class="frame-2">
-            <span class="caption bolder-2 color-n600">UBER</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">Lead Developer</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">2015</span>
-          </div>
-          <p class="body-3 color-n600 mb-12">
-            A smart assistant to make driving more safe, efficient, and fun by
-            unlocking your most expensive computer: your car.
-          </p>
-          <ul class="tags">
-            <li class="tag"><span class="small color-b400">html</span></li>
-            <li class="tag">
-              <span class="small color-b400">Ruby on rails</span>
-            </li>
-            <li class="tag"><span class="small color-b400">css</span></li>
-            <li class="tag">
-              <span class="small color-b400">JavaScript</span>
-            </li>
-          </ul>
-          <div class="action">
-            <button type="button" class="button">See Project</button>
-          </div>
-        </div>
-      </article> -->
-    </div>
+    <div id="portfolio" class="works"></div>
     <section id="about" class="about-container bg-n0">
       <div class="about">
         <h2 class="header-2 color-n800 mb-12">About<br />Myself</h2>
