--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@
             </li>
           </ul>
           <div class="divider"></div>
+          <div class="modal-action mt-20">
+            <button type="button" class="button fullwidth">
+              See live
+              <img src="images/icons/live-link.svg" alt="" />
+            </button>
+            <button type="button" class="button fullwidth">
+              See Source 
+              <img src="images/icons/github-blue.svg" alt="" />
+            </button>
+          </div>
         </div>
       </div>
     </div>
