--- a/index.html
+++ b/index.html
@@ -133,47 +133,49 @@
     <div id="portfolio" class="works"></div>
 
     <div class="modal bg-n50">
-      <div class="modal-content bg-n0">
-        <div class="modal-header mb-12">
-          <h2 class="header-3 color-n800">Tonic</h2>
-          <a id="close-modal" href="#close-modal" class="icon-button">
-            <img src="images/icons/cancel.svg" alt="Close Modal" />
-          </a>
-        </div>
-        <div class="modal-body">
-          <div class="frame-2">
-            <span class="caption bolder-2 color-n600">CANOPY</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">Backend Dev</span>
-            <img src="images/icons/dot.svg" alt="" />
-            <span class="caption bolder-2 color-n100">2015</span>
+      <div class="modal-dialog">
+        <div class="modal-content bg-n0">
+          <div class="modal-header mb-12">
+            <h2 class="header-3 color-n800">Tonic</h2>
+            <a id="close-modal" href="#close-modal" class="icon-button">
+              <img src="images/icons/cancel.svg" alt="Close Modal" />
+            </a>
           </div>
-          <img
-            src="images/snapshots/facebook.svg"
-            alt="Snapshot of the project"
-            class="snapshot"
-          />
-          <p class="body-3 color-n600 mt-12 mb-12">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required..
-          </p>
-          <ul class="tags">
-            <li class="tag"><span class="small color-b400">html</span></li>
-            <li class="tag"><span class="small color-b400">css</span></li>
-            <li class="tag">
-              <span class="small color-b400">JavaScript</span>
-            </li>
-          </ul>
-          <div class="divider"></div>
-          <div class="modal-action mt-20">
-            <button type="button" class="button fullwidth">
-              See live
-              <img src="images/icons/live-link.svg" alt="" />
-            </button>
-            <button type="button" class="button fullwidth">
-              See Source 
-              <img src="images/icons/github-blue.svg" alt="" />
-            </button>
+          <div class="modal-body">
+            <div class="captions">
+              <span class="caption bolder-2 color-n600">CANOPY</span>
+              <img src="images/icons/dot.svg" alt="" />
+              <span class="caption bolder-2 color-n100">Backend Dev</span>
+              <img src="images/icons/dot.svg" alt="" />
+              <span class="caption bolder-2 color-n100">2015</span>
+            </div>
+            <img
+              src="images/snapshots/facebook.svg"
+              alt="Snapshot of the project"
+              class="snapshot"
+            />
+            <p class="body-3 color-n600 mt-12 mb-12">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required..
+            </p>
+            <ul class="tags">
+              <li class="tag"><span class="small color-b400">html</span></li>
+              <li class="tag"><span class="small color-b400">css</span></li>
+              <li class="tag">
+                <span class="small color-b400">JavaScript</span>
+              </li>
+            </ul>
+            <div class="divider"></div>
+            <div class="modal-footer mt-20">
+              <button type="button" class="button fullwidth">
+                See live
+                <img src="images/icons/live-link.svg" alt="" />
+              </button>
+              <button type="button" class="button fullwidth">
+                See Source 
+                <img src="images/icons/github-blue.svg" alt="" />
+              </button>
+            </div>
           </div>
         </div>
       </div>
