--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </section>
     <div id="portfolio" class="works"></div>
 
-    <div class="modal bg-n50">
+    <!-- <div class="modal bg-n50">
       <div class="modal-dialog">
         <div class="modal-content bg-n0">
           <div class="modal-header mb-12">
@@ -179,7 +179,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <section id="about" class="about-container bg-n0">
       <div class="about">
