--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </section>
     <div id="portfolio" class="works"></div>
 
-    <!-- <div class="modal bg-n50">
+    <div class="modal bg-n50">
       <div class="modal-dialog">
         <div class="modal-content bg-n0">
           <div class="modal-header mb-12">
@@ -155,8 +155,7 @@
               class="snapshot"
             />
             <p class="body-3 color-n600 mt-12 mb-12">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required..
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent.
             </p>
             <ul class="tags">
               <li class="tag"><span class="small color-b400">html</span></li>
@@ -179,7 +178,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <section id="about" class="about-container bg-n0">
       <div class="about">
