--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <img
               src="images/snapshots/facebook.svg"
               alt="Snapshot of the project"
-              class="snapshot"
+              class="modal-image"
             />
             <p class="body-3 color-n600 mt-12 mb-12">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent.
