--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </section>
     <div id="portfolio" class="works"></div>
 
-    <div class="modal bg-n50">
+    <div class="modal">
       <div class="modal-dialog">
         <div class="modal-content bg-n0">
           <div class="modal-header mb-12">
@@ -157,23 +157,25 @@
             <p class="body-3 color-n600 mt-12 mb-12">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent.
             </p>
-            <ul class="tags">
-              <li class="tag"><span class="small color-b400">html</span></li>
-              <li class="tag"><span class="small color-b400">css</span></li>
-              <li class="tag">
-                <span class="small color-b400">JavaScript</span>
-              </li>
-            </ul>
-            <div class="divider"></div>
-            <div class="modal-footer mt-20">
-              <button type="button" class="button fullwidth">
-                See live
-                <img src="images/icons/live-link.svg" alt="" />
-              </button>
-              <button type="button" class="button fullwidth">
-                See Source 
-                <img src="images/icons/github-blue.svg" alt="" />
-              </button>
+            <div class="modal-right-block">
+              <ul class="tags">
+                <li class="tag"><span class="small color-b400">html</span></li>
+                <li class="tag"><span class="small color-b400">css</span></li>
+                <li class="tag">
+                  <span class="small color-b400">JavaScript</span>
+                </li>
+              </ul>
+              <div class="divider"></div>
+              <div class="modal-footer mt-20">
+                <button type="button" class="button fullwidth">
+                  See live
+                  <img src="images/icons/live-link.svg" alt="" />
+                </button>
+                <button type="button" class="button fullwidth">
+                  See Source 
+                  <img src="images/icons/github-blue.svg" alt="" />
+                </button>
+              </div>
             </div>
           </div>
         </div>
