--- a/index.html
+++ b/index.html
@@ -154,10 +154,12 @@
               alt="Snapshot of the project"
               class="modal-image"
             />
-            <div class="modal-blocks">
-              <p class="body-3 color-n600 mt-12 mb-12">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent.
-              </p>
+            <div class="modal-blocks mt-12">
+              <div class="modal-left-block">
+                <p class="body-3 color-n600 mb-12">
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent.
+                </p>
+              </div>
               <div class="modal-right-block">
                 <ul class="tags">
                   <li class="tag"><span class="small color-b400">html</span></li>
