--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
       <div class="about">
         <h2 class="header-2 color-n800 mb-12">About<br />Myself</h2>
         <p class="body-2 color-n600 mb-12">
-          Hello I’m a software developer! I can help you build a product ,
-          feature or website Look through some of my work and experience! If you
+          Hello, I’m a software developer! I can help you build a product,
+          feature or website. Look through some of my work and experience! If you
           like what you see and have a project you need coded, don’t hestiate to
           contact me.
         </p>
