Style link button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </p>
       <a
         href="#connect"
-        class="link-button body-2 bolder color-b300 mb-12 drop-shadow"
+        class="body-2 bolder color-b300 mb-12 drop-shadow"
       >
         LET'S CONNECT
       </a>
@@ -170,14 +170,14 @@
                 </ul>
                 <div class="divider"></div>
                 <div class="modal-footer mt-20">
-                  <button type="button" class="button fullwidth">
+                  <a href="live" class="normal-secondary-button">
                     See live
                     <img src="images/icons/live-link.svg" alt="" />
-                  </button>
-                  <button type="button" class="button fullwidth">
+                  </a>
+                  <a href="#source" class="normal-secondary-button">
                     See Source 
                     <img src="images/icons/github-blue.svg" alt="" />
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -195,7 +195,7 @@
           like what you see and have a project you need coded, don’t hestiate to
           contact me.
         </p>
-        <a href="#connect" class="link-button body-2 bolder color-b300 mb-12">
+        <a href="#connect" class="body-2 bolder color-b300 mb-12">
           LET'S CONNECT
         </a>
         <ul class="social-media-icons mb-12">
@@ -246,7 +246,7 @@
         <li>
           <a
             href="#languages"
-            class="list-header link-button color-black flex-text"
+            class="list-header color-black flex-text"
           >
             <h6 class="body-1 bolder flex-text">Languages</h6>
             <img src="images/icons/chevron-down.svg" alt="Close" />
@@ -269,7 +269,7 @@
         <li>
           <a
             href="#frameworks"
-            class="list-header link-button color-black flex-text"
+            class="list-header color-black flex-text"
           >
             <h6 class="body-1 bolder flex-text">Frameworks</h6>
             <img src="images/icons/chevron-right.svg" alt="Expand" />
@@ -278,7 +278,7 @@
         <li>
           <a
             href="#skills"
-            class="list-header link-button color-black flex-text"
+            class="list-header color-black flex-text"
           >
             <h6 class="body-1 bolder flex-text">Skills</h6>
             <img src="images/icons/chevron-right.svg" alt="Expand" />
