Style modal link button

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
                 </ul>
                 <div class="divider"></div>
                 <div class="modal-footer mt-20">
-                  <a href="live" class="normal-secondary-button">
+                  <a href="live" class="link-button">
                     See live
                     <img src="images/icons/live-link.svg" alt="" />
                   </a>
-                  <a href="#source" class="normal-secondary-button">
+                  <a href="#source" class="link-button">
                     See Source 
                     <img src="images/icons/github-blue.svg" alt="" />
                   </a>
