Add modal box shadow

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                   </li>
                 </ul>
                 <div class="divider"></div>
-                <div class="modal-footer mt-20">
-                  <a href="live" class="link-button">
+                <div class="modal-footer">
+                  <a href="#live" class="link-button">
                     See live
                     <img src="images/icons/live-link.svg" alt="" />
                   </a>
