Dynamicall add modal

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       </ul>
     </section>
     <div id="portfolio" class="works"></div>
-
-    <div class="modal">
+    <div id="mount-modal"></div>
+    <!-- <div class="modal">
       <div class="modal-dialog">
         <div class="modal-content bg-n0">
           <div class="modal-header mb-12">
@@ -184,7 +184,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <section id="about" class="about-container bg-n0">
       <div class="about">
