Adjust card padding

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           <img
             src="images/snapshots/tonic.svg"
             alt="Snapshot of the project"
-            class="snapshot mb-12"
+            class="snapshot"
           />
-          <div class="card-body">
+          <div class="card-body mt-12">
             <h2 class="header-3 color-n800 mb-12">Tonic</h2>
             <div class="frame-2">
               <span class="caption bolder-2 color-n600">CANOPY</span>
@@ -148,9 +148,9 @@
           <img
             src="images/snapshots/stories.svg"
             alt="Snapshot of the project"
-            class="snapshot mb-12"
+            class="snapshot"
           />
-          <div class="card-body swap">
+          <div class="card-body mt-12 swap">
             <h2 class="header-3 color-n800 mb-12">Multi-Post Stories</h2>
             <div class="frame-2">
               <span class="caption bolder-2 color-n600">FACEBOOK</span>
@@ -183,9 +183,9 @@
           <img
             src="images/snapshots/facebook.svg"
             alt="Snapshot of the project"
-            class="snapshot mb-12"
+            class="snapshot"
           />
-          <div class="card-body">
+          <div class="card-body mt-12">
             <h2 class="header-3 color-n800 mb-12">Facebook 360</h2>
             <div class="frame-2">
               <span class="caption bolder-2 color-n600">FACEBOOK</span>
@@ -218,9 +218,9 @@
           <img
             src="images/snapshots/uber.svg"
             alt="Snapshot of the project"
-            class="snapshot mb-12"
+            class="snapshot"
           />
-          <div class="card-body swap">
+          <div class="card-body swap mt-12">
             <h2 class="header-3 color-n800 mb-12">Uber Navigation</h2>
             <div class="frame-2">
               <span class="caption bolder-2 color-n600">UBER</span>
