Remove redundant class

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </p>
         <a
           href="#connect"
-          class="link-button body-2 bolder color-b300 mb-12 drop-shadow"
+          class="body-2 bolder color-b300 mb-12 drop-shadow"
         >
           LET'S CONNECT
         </a>
@@ -258,7 +258,7 @@
             you like what you see and have a project you need coded, don’t
             hestiate to contact me.
           </p>
-          <a href="#connect" class="link-button body-2 bolder color-b300 mb-12">
+          <a href="#connect" class="body-2 bolder color-b300 mb-12">
             LET'S CONNECT
           </a>
           <ul class="social-media-icons mb-12">
@@ -309,7 +309,7 @@
           <li>
             <a
               href="#languages"
-              class="list-header link-button color-black flex-text"
+              class="list-header color-black flex-text"
             >
               <h6 class="body-1 bolder flex-text">Languages</h6>
               <img src="images/icons/chevron-down.svg" alt="Close" />
@@ -332,7 +332,7 @@
           <li>
             <a
               href="#frameworks"
-              class="list-header link-button color-black flex-text"
+              class="list-header color-black flex-text"
             >
               <h6 class="body-1 bolder flex-text">Frameworks</h6>
               <img src="images/icons/chevron-right.svg" alt="Expand" />
@@ -341,7 +341,7 @@
           <li>
             <a
               href="#skills"
-              class="list-header link-button color-black flex-text"
+              class="list-header color-black flex-text"
             >
               <h6 class="body-1 bolder flex-text">Skills</h6>
               <img src="images/icons/chevron-right.svg" alt="Expand" />
