--- a/index.html
+++ b/index.html
@@ -400,15 +400,13 @@
       <nav id="mobile-nav" class="expand-nav">
         <ul>
           <li class="mb-40">
-            <a href="#portfolio" class="header-3 fw-600 color-n0">
-              Portfolio
-            </a>
+            <a href="#portfolio" class="header-3 fw-600 color-n0">Portfolio</a>
           </li>
           <li class="mb-40">
-            <a href="#about" class="header-3 fw-600 color-n0"> About </a>
+            <a href="#about" class="header-3 fw-600 color-n0">About</a>
           </li>
           <li>
-            <a href="#contact-me" class="header-3 fw-600 color-n0"> Contact </a>
+            <a href="#contact-me" class="header-3 fw-600 color-n0">Contact</a>
           </li>
         </ul>
       </nav>
