Show opened menu on screen size change

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           ><img src="images/logo.svg" alt="Home Logo"
         /></a>
         <nav id="navbar-spy" class="navbar">
-          <a id="open-menu" href="#menu" class="icon-button menu-button"
+          <a id="open-menu" href="#menu" class="icon-button nav-button"
             ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
           /></a>
           <ul class="menu-items nav">
