--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </ul>
       </nav>
     </div>
-    <div class="modal-container"></div>
+    <div id="modal-container"></div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
