Use semantic element

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           ><img src="images/logo.svg" alt="Home Logo"
         /></a>
         <nav id="navbar-spy" class="navbar">
-          <a id="open-menu" href="#menu" class="icon-button nav-button"
-            ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
-          /></a>
+          <button id="open-menu" class="icon-button nav-button">
+            <img src="images/icons/menu.svg" alt="Menu" width="24" height="24"/>
+          </button>
           <ul class="menu-items nav">
             <li class="nav-item">
               <a href="#portfolio" class="nav-link body-3 bolder color-n600">
@@ -257,9 +257,9 @@
     </div>
     <div class="mobile-menu bg-b400">
       <div class="app-bar">
-        <a id="close-menu" href="#close" class="icon-button menu-button">
+        <button id="close-menu" class="icon-button menu-button">
           <img src="images/icons/close.svg" alt="Close menu" />
-        </a>
+        </button>
       </div>
       <nav id="mobile-nav" class="expand-nav">
         <ul>
