Fix linter error

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           ><img src="images/logo.svg" alt="Home Logo"
         /></a>
         <nav id="navbar-spy" class="navbar">
-          <button id="open-menu" class="icon-button nav-button">
+          <button type="button" id="open-menu" class="icon-button nav-button">
             <img src="images/icons/menu.svg" alt="Menu" width="24" height="24"/>
           </button>
           <ul class="menu-items nav">
@@ -257,7 +257,7 @@
     </div>
     <div class="mobile-menu bg-b400">
       <div class="app-bar">
-        <button id="close-menu" class="icon-button menu-button">
+        <button type="button" id="close-menu" class="icon-button menu-button">
           <img src="images/icons/close.svg" alt="Close menu" />
         </button>
       </div>
