--- a/index.html
+++ b/index.html
@@ -515,5 +515,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
+    <script src="advice.js"></script>
   </body>
 </html>
