--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             feature that you need built or a project that needs coding. I’d love
             to help with it
           </p>
-          <form action="https://formspree.io/f/xdoygqql" method="POST">
+          <form id="contact-form" action="https://formspree.io/f/xdoygqql" method="POST">
             <input
               type="text"
               name="user_name"
