Add validation message

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
             <div class="action-button">
               <button type="submit" class="button">Get In Touch</button>
             </div>
+            <small class="color-n0 align-center"></small>
           </form>
         </section>
       </footer>
