Clear stored data on reset

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
             ></textarea>
             <div class="action-button">
               <button type="submit" class="button">Get In Touch</button>
+              <button type="reset" class="button">Reset</button>
             </div>
             <small class="color-n0 align-center"></small>
           </form>
