--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
               maxlength="500"
               required
             ></textarea>
+            <small id="helper-text" class="color-n0"></small>
             <div class="action-button">
               <button type="submit" class="button">Get In Touch</button>
               <button type="reset" class="button">Reset</button>
             </div>
-            <small class="color-n0 align-center"></small>
           </form>
         </section>
       </footer>
