--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
   <body data-bs-spy="scroll" data-bs-target="#navbar-spy" data-bs-offset="56">
     <div class="container">
       <header class="app-bar bg-n0">
-        <a href="/" class="logo"
-          ><img src="images/logo.svg" alt="Home Logo"
-        /></a>
+        <a href="/" class="logo color-b400">Usman</a>
         <nav id="navbar-spy" class="navbar">
           <button type="button" id="open-menu" class="icon-button nav-button">
-            <img src="images/icons/menu.svg" alt="Menu" width="24" height="24"/>
+            <img
+              src="images/icons/menu.svg"
+              alt="Menu"
+              width="24"
+              height="24"
+            />
           </button>
           <ul class="menu-items nav">
             <li class="nav-item">
@@ -63,10 +66,7 @@
           you see and have a project you need coded, don’t hestiate to contact
           me.
         </p>
-        <a
-          href="#connect"
-          class="body-2 bolder color-b300 mb-12 drop-shadow"
-        >
+        <a href="#connect" class="body-2 bolder color-b300 mb-12 drop-shadow">
           LET'S CONNECT
         </a>
         <ul class="social-media-icons">
@@ -171,10 +171,7 @@
         </div>
         <ul class="skill-list">
           <li>
-            <a
-              href="#languages"
-              class="list-header color-black flex-text"
-            >
+            <a href="#languages" class="list-header color-black flex-text">
               <h6 class="body-1 bolder flex-text">Languages</h6>
               <img src="images/icons/chevron-down.svg" alt="Close" />
             </a>
@@ -194,19 +191,13 @@
             </ul>
           </li>
           <li>
-            <a
-              href="#frameworks"
-              class="list-header color-black flex-text"
-            >
+            <a href="#frameworks" class="list-header color-black flex-text">
               <h6 class="body-1 bolder flex-text">Frameworks</h6>
               <img src="images/icons/chevron-right.svg" alt="Expand" />
             </a>
           </li>
           <li>
-            <a
-              href="#skills"
-              class="list-header color-black flex-text"
-            >
+            <a href="#skills" class="list-header color-black flex-text">
               <h6 class="body-1 bolder flex-text">Skills</h6>
               <img src="images/icons/chevron-right.svg" alt="Expand" />
             </a>
@@ -221,7 +212,11 @@
             feature that you need built or a project that needs coding. I’d love
             to help with it
           </p>
-          <form id="contact-form" action="https://formspree.io/f/xdoygqql" method="POST">
+          <form
+            id="contact-form"
+            action="https://formspree.io/f/xdoygqql"
+            method="POST"
+          >
             <input
               type="text"
               name="user_name"
@@ -278,7 +273,11 @@
       </nav>
     </div>
     <div id="modal-container"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="index.js"></script>
   </body>
 </html>
