Update about me

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           I’m Usman,<br />Glad to see you!
         </h1>
         <p class="body-2 color-n600 mb-12 drop-shadow">
-          I’m a software developer! I can help you build a product feature or
-          website. Look through some of my work and experience! If you like what
-          you see and have a project you need coded, don’t hestiate to contact
-          me.
+          I’m a full-stack software developer! I can help you build a product
+          feature or website. Look through some of my work and experience! If
+          you like what you see and have a project you need coded, don’t
+          hestiate to contact me.
         </p>
         <a href="#connect" class="body-2 bolder color-b300 mb-12 drop-shadow">
           LET'S CONNECT
@@ -106,13 +106,22 @@
       </section>
       <div id="portfolio" class="works"></div>
       <section id="about" class="about-container bg-n0">
-        <div class="about">
+        <div class="about body-2 color-n600">
           <h2 class="header-2 color-n800 mb-12">About<br />Myself</h2>
-          <p class="body-2 color-n600 mb-12">
-            Hello I’m a software developer! I can help you build a product ,
-            feature or website Look through some of my work and experience! If
-            you like what you see and have a project you need coded, don’t
-            hestiate to contact me.
+          <p class="color-n600">
+            Hello, I’m a software developer! I enjoy building pixel-perfect user
+            interfaces and writing elegant code.
+          </p>
+          <p>
+            I'm currently studying at Microverse, an online dev school training
+            world-class software developers one cohort at a time. My curriculum
+            at Microverse includes collaborating and pair-programming with
+            students from all over the world and gaining a ton of experience
+            along the way.
+          </p>
+          <p class="mb-12">
+            If you like what you see or have a project I can help with, don't
+            hesitate to contact me.
           </p>
           <a href="#connect" class="body-2 bolder color-b300 mb-12">
             LET'S CONNECT
