--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
         </nav>
       </header>
       <section class="headline bg-n0">
+        <img
+          src="https://avatars.githubusercontent.com/u/10219539?v=4"
+          alt=""
+          class="profile-image mb-12"
+        />
         <h1 class="header-1 color-n800 mb-12">
           I’m Usman,<br />Glad to see you!
         </h1>
