Update about me

--- a/index.html
+++ b/index.html
@@ -114,15 +114,16 @@
         <div class="about body-2 color-n600">
           <h2 class="header-2 color-n800 mb-12">About<br />Myself</h2>
           <p class="color-n600">
-            Hello, I’m a software developer! I enjoy building pixel-perfect user
-            interfaces and writing elegant code.
+            I've spent the first 3 years of my career gaining the knowledge of
+            principles, patterns, practices, and heuristics that a craftsman
+            knows.
           </p>
           <p>
-            I'm currently studying at Microverse, an online dev school training
-            world-class software developers one cohort at a time. My curriculum
-            at Microverse includes collaborating and pair-programming with
-            students from all over the world and gaining a ton of experience
-            along the way.
+            Now, I'm currently studying at Microverse, an online dev school
+            training world-class software developers one cohort at a time. My
+            curriculum at Microverse includes collaborating and pair-programming
+            with students from all over the world and gaining a ton of
+            experience along the way.
           </p>
           <p class="mb-12">
             If you like what you see or have a project I can help with, don't
