Update LinkedIn url

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </a>
         <ul class="social-media-icons">
           <li>
-            <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+            <a href="https://www.linkedin.com/in/usmansbk/"
               ><img
                 src="images/icons/linkedin.svg"
                 alt="LinkedIn Profile"
@@ -134,7 +134,7 @@
           </a>
           <ul class="social-media-icons mb-12">
             <li>
-              <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+              <a href="https://www.linkedin.com/in/usmansbk/"
                 ><img
                   src="images/icons/linkedin.svg"
                   alt="LinkedIn Profile"
