--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               /></a>
             </li>
           </ul>
-          <a href="https://docs.google.com/document/d/10-OEfr43ll5xtag4RCN11l1JnF83EJW_Ppp_y3xTnWo/export?format=pdf" class="button">Get my resume</a>
+          <a href="./resume.pdf" class="button">Get my resume</a>
         </div>
         <ul class="skill-list">
           <li>
